<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">AdkWikiService3</string>
	<string name="input">In</string>
	<string name="output">Out</string>
	<string name="no_device">Please connect a DemoKit board.</string>
	<string name="servo1Label">Servo<sub>1</sub></string>
	<string name="ledLabel">LED<sub>1</sub></string>
	<string name="relay1Label">Relay<sub>1</sub></string>
	<string name="relay2Label">Relay<sub>2</sub></string>
	<string name="off">Off</string>
	<string name="on">On</string>
	<string name="wiki_save">save</string>
	<string name="wiki_read">read/start</string>
	<string name="wiki_edit">edit</string>
	<string name="wiki_update">update</string>
	<string name="wiki_params">params</string>
	<string name="wiki_clear_message">clear message</string>
	<string name="wiki_show_message">show message</string>
	<string name="wiki_con">con</string>
	<string name="wiki_send">send</string>
	<string name="authentication_label">login</string>
	<string name="id_label">id:</string>
	<string name="password_label">password:</string>
	<string name="ok">OK</string>
	<string name="cancel">cancel</string>
	<string name="a_basic_program_area">program area</string>
	<string name="a_basic_run_button">run</string>
	<string name="a_basic_program_clear_button">clear</string>
	<string name="a_basic_previous_program_button">pre</string>
	<string name="a_basic_next_program_button">next</string>
	<string name="a_basic_output_area">output</string>
	<string name="a_basic_output_clear_button">clear</string>
	<string name="a_basic_input_area">input</string>
	<string name="a_basic_a_basic_choose_previous_button">pre</string>
	<string name="a_basic_a_basic_choose_next_button">next</string>
	<string name="a_basic_input_enter_button">enter</string>
	<string name="a_basic_input_clear_button">clear</string>
	<string name="a_basic_trace_checkbox">trace</string>
	<string name="a_basic_stop_checkbox">stop</string>
	<string name="a_basic_graphics_clear_button">clear</string>
	<string name="wiki_download_label">download(read)</string>
	<string name="wiki_upload_label">upload(write)</string>
    <string name="wiki_url_label">url</string>
	<string name="wiki_message_label">message</string>
	<string name="wiki_load_button_label">read</string>
	<string name="wiki_save_button_label">write</string>
	<string name="main_debug_label">Dbg</string>
	<string name="main_login_label">Login</string>
	<string name="input_default_url">http://www.yama-lab.org/adk-wiki-1/index.php?Test1</string>
	<string name="main_wiki_label">Wiki</string>
	<string name="main_stop">Stop</string>
	<string name="wiki_login_id_label">login id:</string>
	<string name="wiki_login_pw_label">login pw:</string>
	<string name="wiki_login_button_label">Login/Start</string>
	<string name="wiki_cancel_button_label">cancel</string>
	<string name="wiki_login_required_label">login required.</string>
	<string name="label_to_arduino">to arduino</string>
	<string name="label_to_wiki">to wiki</string>
	<string name="wiki_to_arduino">↑wiki to arduino</string>
	<string name="ardunio_to_woki">↓ arduino to wiki</string>
	<string name="a0"> a0</string>
	<string name="n0">     0</string>
	<string name="a1"> a1</string>
	<string name="a2">" a2"</string>
	<string name="a3">" a3"</string>
	<string name="a4">" a4"</string>
	<string name="a5">" a5"</string>
	<string name="a6">" a6"</string>
	<string name="a7">" a7"</string>
	<string name="digitalInputLabel">digital input:</string>
	<string name="dv0">0</string>
	<string name="d2v">2</string>
	<string name="d3v">3</string>
	<string name="d4v">4</string>
	<string name="d5v">5</string>
	<string name="d6v">6</string>
	<string name="d7v">7</string>
	<string name="d8v">8</string>
	<string name="d9v">9</string>
	<string name="o8">pin 8</string>
	<string name="o9">pin 9</string>
	<string name="o10">pin 10</string>
	<string name="o11">pin 11</string>
	<string name="o12">pin 12</string>
	<string name="o13">pin 13</string>
	<string name="a">a</string>
	<string name="d">d</string>
	<string name="space">" "</string>
	<string name="off_string">Off</string>
	<string name="d0v">0</string>
	<string name="d1v">1</string>

</resources>
