<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:orientation="vertical" android:weightSum="2">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/url_label"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:text="@string/wiki_url_label" />

        <EditText
            android:id="@+id/wiki_url_text_field"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scrollbars="vertical"
            android:text="@string/input_default_url" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="30dp" >

        <TextView
            android:id="@+id/wiki_login_required_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/wiki_login_required_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/wiki_login_id_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wiki_login_id_label"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/wiki_login_id_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/wiki_login_pw_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wiki_login_pw_label"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/wiki_login_pw_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/wiki_load_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wiki_read" />

        <Button
            android:id="@+id/wiki_login_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/wiki_login_button_label" />

        <Button
            android:id="@+id/wiki_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wiki_save_button_label" />

        <Button
            android:id="@+id/wiki_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/wiki_cancel_button_label" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wiki_download_label" />

	<EditText
	    android:id="@+id/wiki_download_area"
	    android:layout_width="match_parent"
	    android:layout_height="50dp"
	    android:scrollbars="vertical"
	    android:inputType="textMultiLine" />

	<TextView
	    android:id="@+id/textView2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/wiki_upload_label" />

	<EditText
	    android:id="@+id/wiki_upload_area"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="textMultiLine"
	    android:scrollbars="vertical"
	    android:textSize="12sp" >

	    <requestFocus />
	</EditText>

	<TextView
	    android:id="@+id/textView3"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/wiki_message_label" />

	<EditText
	    android:id="@+id/wiki_message_area"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        android:scrollbars="vertical"
	    android:inputType="textMultiLine" />

</LinearLayout>

